test/e2e/features/listener_policy/testdata/forward-client-cert/client-alice-secret.yaml
# Alice's client cert + key, mounted into the curl-mtls pod for outgoing
# mTLS requests. Same CA also goes here so the curl pod can verify the
# gateway server cert.
# Subject: CN=alice, O=acme, OU=engineering
# SANs:    URI=spiffe://acme.example.com/ns/team-alpha/sa/alice
#          DNS=alice.acme.example.com
apiVersion: v1
kind: Secret
metadata:
  name: forward-client-cert-alice
  namespace: curl-listener-policy
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV0RENDQXB5Z0F3SUJBZ0lVWnFSQlVZaWVSRVFudVdRcmdqa0VwVnc1V1RNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd016RVpNQmNHQTFVRUF3d1FlR1pqWXkxMFpYTjBMV1V5WlMxallURVdNQlFHQTFVRUNnd05hMmRoZEdWMwpZWGt0ZEdWemREQWVGdzB5TmpBME1qWXhOakUwTlRsYUZ3MHpOakEwTWpNeE5qRTBOVGxhTURVeERqQU1CZ05WCkJBTU1CV0ZzYVdObE1RMHdDd1lEVlFRS0RBUmhZMjFsTVJRd0VnWURWUVFMREF0bGJtZHBibVZsY21sdVp6Q0MKQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFMSU5EOVJjNWhjUFpURnZwd1hEdzJDOAprVHBpOFVaYUZ0UTVoO [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ3lEUS9VWE9ZWEQyVXgKYjZjRnc4Tmd2SkU2WXZGR1doYlVPWWZIVWQ2aHd4b1Fjdld3YXJjTktZZnJ1dlZMbVJzNm1sMzdCTTNvU2pFVgpLSkFoRUF5NVBUOWRkV1R6L0o0Um1BR1RUVW80UjgrS2V2U2RBd0o1YzVHa3BUYTJ2N0k1SlFBbjJsVGdkeUl4CmNCd2RKdSs5R1VmQituVWU3WVRvTkdoK3l5Y1pLTnJKL2pKNU9KYldxbVRNNkRZTEZrV2ZTbmUxa1pXbEJGS0cKbWlRNWc4eWtHWitPTjBOTXM4dTdRd3hRU2d4QXRmZDdseVdTeDdhZWlUd044K2NUS1NrRjRaSmV2NEpoWlN4TApSbFNZaG9ib2ZOYVQ1b [...]
---
apiVersion: v1
kind: Secret
metadata:
  name: forward-client-cert-ca
  namespace: curl-listener-policy
type: Opaque
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZSekNDQXkrZ0F3SUJBZ0lVZFNMdzRuZ0VEc05saU1RaFVmSXJsU2taQnNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd016RVpNQmNHQTFVRUF3d1FlR1pqWXkxMFpYTjBMV1V5WlMxallURVdNQlFHQTFVRUNnd05hMmRoZEdWMwpZWGt0ZEdWemREQWVGdzB5TmpBME1qWXhOakUwTlRsYUZ3MHpOakEwTWpNeE5qRTBOVGxhTURNeEdUQVhCZ05WCkJBTU1FSGhtWTJNdGRHVnpkQzFsTW1VdFkyRXhGakFVQmdOVkJBb01EV3RuWVhSbGQyRjVMWFJsYzNRd2dnSWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDRHdBd2dnSUtBb0lDQVFDU05kVkFmZGpZTkFUN2cveTd5UE1FZ0RwZApLcE40RUNLZ2RKbjhhY2 [...]
