test/e2e/features/listener_policy/testdata/forward-client-cert/client-ca-secret.yaml
# CA bundle the listener uses to validate client certs (mTLS).
apiVersion: v1
kind: Secret
metadata:
  name: forward-client-cert-ca
  namespace: default
type: Opaque
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZSekNDQXkrZ0F3SUJBZ0lVZFNMdzRuZ0VEc05saU1RaFVmSXJsU2taQnNvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd016RVpNQmNHQTFVRUF3d1FlR1pqWXkxMFpYTjBMV1V5WlMxallURVdNQlFHQTFVRUNnd05hMmRoZEdWMwpZWGt0ZEdWemREQWVGdzB5TmpBME1qWXhOakUwTlRsYUZ3MHpOakEwTWpNeE5qRTBOVGxhTURNeEdUQVhCZ05WCkJBTU1FSGhtWTJNdGRHVnpkQzFsTW1VdFkyRXhGakFVQmdOVkJBb01EV3RuWVhSbGQyRjVMWFJsYzNRd2dnSWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDRHdBd2dnSUtBb0lDQVFDU05kVkFmZGpZTkFUN2cveTd5UE1FZ0RwZApLcE40RUNLZ2RKbjhhY2 [...]
