test/e2e/features/listener_policy/testdata/forward-client-cert/server-cert-secret.yaml
# Server cert presented by the gw 'mtls-https' listener (SAN: gateway.local).
apiVersion: v1
kind: Secret
metadata:
  name: forward-client-cert-server
  namespace: default
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVjekNDQWx1Z0F3SUJBZ0lVWnFSQlVZaWVSRVFudVdRcmdqa0VwVnc1V1RJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd016RVpNQmNHQTFVRUF3d1FlR1pqWXkxMFpYTjBMV1V5WlMxallURVdNQlFHQTFVRUNnd05hMmRoZEdWMwpZWGt0ZEdWemREQWVGdzB5TmpBME1qWXhOakUwTlRsYUZ3MHpOakEwTWpNeE5qRTBOVGxhTURBeEZqQVVCZ05WCkJBTU1EV2RoZEdWM1lYa3ViRzlqWVd3eEZqQVVCZ05WQkFvTURXdG5ZWFJsZDJGNUxYUmxjM1F3Z2dFaU1BMEcKQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUROaW1tQVJiQXhCeXV2OUZnWUVDSFVHMUozQ1laaQozaktMWkdubjhJRFgwb [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRE5pbW1BUmJBeEJ5dXYKOUZnWUVDSFVHMUozQ1laaTNqS0xaR25uOElEWDBsMVl1QlFneFZraEJ5aFdDQ1FPbEVRbithQ0FuYmtJc1dzZQpjUy9rVHVxblJndlNsVVJSbUh6eFBkb3JUSCtXcE1GLzRIV3dtMmFHeHNIbVRNK3pNTDA4djhIOGdBWVVTK2YwCjVBdlZpK0o1NVorOUw1Z3cvblNqS2ZsRlR4NDBMTG92LzYvKzRxbldnMnlkZlFiM0FrdTVod014OHJrd1pSeVcKNnNuTVZ2QXExeWFRYk5LUG45VUVjQ3RHOGozbU5OMzYwTWpzVlpXL3BDdGJXRldJMU1WRUdUbnp5MUpXOVlBUwo3aXdEZUlxVEt5dXYvS [...]
